<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclcpp_dds_examples</name>
  <version>0.1.1</version>
  <description>Example applications for rclcpp_dds</description>
  <maintainer email="asorbini@rti.com">asorbini</maintainer>
  <license>RTI-FREE-USE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_dds</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
